corrected error on small screens by adding margin to bottom of index page blurb

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,6 +221,7 @@ main {
 #about_us_p {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+    margin-bottom: 1rem;
     columns: 1;
     font-size: 110%;
 }
@@ -265,6 +266,7 @@ main {
     #about_us_p {
         margin-left: 1.5rem;
         margin-right: 1.5rem;
+        margin-bottom: 1rem;
         columns: 2;
         font-size: 120%;
     }
